Add site pages after folder move

--- a/contact.html
+++ b/contact.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width,initial-scale=1.0" />
-  <title>ClaimWrit | Home</title>
+  <title>Contact | ClaimWrit</title>
   <link rel="stylesheet" href="styles.css" />
 </head>
 <body>
@@ -11,25 +11,29 @@
 <header>
   <nav>
     <ul>
-      <li><a href="index.html" class="active">Home</a></li>
+      <li><a href="index.html">Home</a></li>
       <li><a href="about.html">About Us</a></li>
       <li><a href="more-about-us.html">More About Us</a></li>
       <li><a href="services.html">Services</a></li>
       <li><a href="request-sample.html">Request Sample</a></li>
       <li><a href="client-upload.html">Client Portal</a></li>
-      <li><a href="contact.html">Contact</a></li>
+      <li><a href="contact.html" class="active">Contact</a></li>
       <li><a href="blog.html">Blog</a></li>
     </ul>
   </nav>
-  <h1 class="page-title">Precision Demand-Letter Drafting</h1>
-  <p class="page-tagline">Empowering law firms with litigation-ready correspondence.</p>
+  <h1 class="page-title">Contact ClaimWrit</h1>
+  <p class="page-tagline">We’re here to support your practice.</p>
 </header>
 
-<main class="success-card">
-  <p>Welcome to ClaimWrit. Explore our services or request a sample letter below.</p>
-  <a href="services.html"        class="cta-button">View Services</a>
-  <a href="request-sample.html"  class="cta-button">Request a Sample</a>
-  <a href="client-upload.html"   class="cta-button">Secure Client Portal</a>
+<main class="sample-request-form">
+  <p>
+    <strong>Phone:</strong> (954) 408-1937<br>
+    <strong>E-mail:</strong> <a href="mailto:info@claimwrit.com">info@claimwrit.com</a><br>
+    <strong>Mail:</strong> ClaimWrit · Fort Lauderdale, FL 33334
+  </p>
+  <p>
+    For secure document uploads, please use our <a href="client-upload.html">Client Portal</a>.
+  </p>
 </main>
 
 <footer>
