--- a/upload-success.html
+++ b/upload-success.html
@@ -3,15 +3,16 @@
 <head>
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width,initial-scale=1.0" />
-  <title>ClaimWrit | Home</title>
+  <title>Upload Received | ClaimWrit</title>
   <link rel="stylesheet" href="styles.css" />
 </head>
 <body>
+<?php session_start(); $cid = $_SESSION['client_id'] ?? 'your secure folder'; ?>
 
 <header>
   <nav>
     <ul>
-      <li><a href="index.html" class="active">Home</a></li>
+      <li><a href="index.html">Home</a></li>
       <li><a href="about.html">About Us</a></li>
       <li><a href="more-about-us.html">More About Us</a></li>
       <li><a href="services.html">Services</a></li>
@@ -21,15 +22,16 @@
       <li><a href="blog.html">Blog</a></li>
     </ul>
   </nav>
-  <h1 class="page-title">Precision Demand-Letter Drafting</h1>
-  <p class="page-tagline">Empowering law firms with litigation-ready correspondence.</p>
+  <h1 class="page-title">Upload Successful</h1>
 </header>
 
 <main class="success-card">
-  <p>Welcome to ClaimWrit. Explore our services or request a sample letter below.</p>
-  <a href="services.html"        class="cta-button">View Services</a>
-  <a href="request-sample.html"  class="cta-button">Request a Sample</a>
-  <a href="client-upload.html"   class="cta-button">Secure Client Portal</a>
+  <p>Your documents have been saved to the secure folder:</p>
+  <p><strong><?= htmlspecialchars($cid) ?></strong></p>
+  <p>We’ll review them and confirm receipt within one business day.</p>
+
+  <a href="client-upload.html" class="cta-button">Upload More Files</a>
+  <a href="index.html" class="cta-button">Return Home</a>
 </main>
 
 <footer>
