Recreate all site pages with updated nav & content

--- a/INDEX.HTML
+++ b/INDEX.HTML
@@ -2,38 +2,153 @@
 <html lang="en">
 <head>
   <meta charset="UTF-8" />
-  <meta name="viewport" content="width=device-width,initial-scale=1.0" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
   <title>ClaimWrit | Home</title>
   <link rel="stylesheet" href="styles.css" />
+  <style>
+    /* NAV BAR */
+    nav ul {
+      list-style: none;
+      margin: 0;
+      padding: 0;
+      background: #8ED1C6;
+      text-align: center;
+    }
+    nav ul li {
+      display: inline-block;
+      margin: 0 1rem;
+    }
+    nav ul li a {
+      color: white;
+      text-decoration: none;
+      font-weight: bold;
+      padding: 14px 0;
+      display: inline-block;
+    }
+    nav ul li a.active,
+    nav ul li a:hover {
+      text-decoration: underline;
+    }
+
+    /* HOVER BOX */
+    .box {
+      position: relative;
+      width: 6em;
+      height: 6em;
+      margin: 2rem auto;
+      line-height: 6em;
+      overflow: hidden;
+      transform: translateZ(0);
+    }
+    .box div {
+      position: absolute;
+      width: 100%;
+      height: 100%;
+      text-align: center;
+      line-height: inherit;
+      transition: transform .4s ease;
+      font-weight: 600;
+      color: #fff;
+      font-size: 1rem;
+      text-transform: uppercase;
+      letter-spacing: .5px;
+    }
+    .box div::before {
+      content: '';
+      position: absolute;
+      width: 70.71%;
+      height: 70.71%;
+      background: inherit;
+      transform: rotate(45deg);
+      transition: all .4s ease;
+    }
+    .box__right  { background: #0a9d9a; transform: translateX(100%); }
+    .box__left   { background: #197278; transform: translateX(-100%); }
+    .box__top    { background: #ff6f5e; transform: translateY(-100%); }
+    .box__bottom { background: #ffc43d; transform: translateY(100%); }
+    .box__center { background: #ff914d; z-index: -1; }
+    .box__right::before  { right:100%; bottom:0; transform-origin:100% 100%; }
+    .box__left::before   { left:100%; top:0;   transform-origin:0 0;      }
+    .box__top::before    { right:0;    top:100%; transform-origin:100% 0;   }
+    .box__bottom::before { left:0;     bottom:100%;transform-origin:0 100%; }
+    .box__right:hover,
+    .box__left:hover,
+    .box__top:hover,
+    .box__bottom:hover {
+      transform: translate(0,0);
+      z-index:1;
+    }
+    .box__right:hover::before,
+    .box__left:hover::before,
+    .box__top:hover::before,
+    .box__bottom:hover::before {
+      width:100%; height:100%; transform:none;
+    }
+    .box__right:hover  ~ .box__center { transform:translateX(-100%); }
+    .box__left:hover   ~ .box__center { transform:translateX(100%); }
+    .box__top:hover    ~ .box__center { transform:translateY(100%); }
+    .box__bottom:hover ~ .box__center { transform:translateY(-100%); }
+  </style>
 </head>
 <body>
-
-<header>
   <nav>
     <ul>
       <li><a href="index.html" class="active">Home</a></li>
-      <li><a href="about.html">About Us</a></li>
-      <li><a href="more-about-us.html">More About Us</a></li>
-      <li><a href="services.html">Services</a></li>
-      <li><a href="request-sample.html">Request Sample</a></li>
+      <li><a href="our-mission.html">Our Mission & Expertise</a></li>
+      <li><a href="how-we-help.html">How We Help</a></li>
+      <li><a href="request-sample.html">Request Sample DEMAND</a></li>
       <li><a href="client-upload.html">Client Portal</a></li>
       <li><a href="contact.html">Contact</a></li>
       <li><a href="blog.html">Blog</a></li>
     </ul>
   </nav>
-  <h1 class="page-title">Precision Demand-Letter Drafting</h1>
-  <p class="page-tagline">Empowering law firms with litigation-ready correspondence.</p>
-</header>
 
-<main class="success-card">
-  <p>Welcome to ClaimWrit. Explore our services or request a sample letter below.</p>
-  <a href="services.html"        class="cta-button">View Services</a>
-  <a href="request-sample.html"  class="cta-button">Request a Sample</a>
-  <a href="client-upload.html"   class="cta-button">Secure Client Portal</a>
-</main>
+  <header style="text-align:center; margin-top:2rem;">
+    <h1>Precision Demand-Letter Drafting &amp; Post-Settlement Support</h1>
+    <p>Your back-office ally for clarity, structure, and resolution.</p>
+  </header>
 
-<footer>
-  <p>&copy; 2025 Envisage Companies, LLC. All rights reserved · <a href="privacy.html">Privacy Policy</a></p>
-</footer>
+  <section>
+    <h2 style="text-align:center;">Our Core Values</h2>
+    <p style="text-align:center; max-width:700px; margin:0.5rem auto;">
+      ClaimWrit is built on expertise, precision, and trust, ensuring law firms receive litigation-ready demand letters that drive results efficiently.
+    </p>
+    <div class="box">
+      <div class="box__right">clarity</div>
+      <div class="box__left">structure</div>
+      <div class="box__top">resolution</div>
+      <div class="box__bottom">ClaimWrit</div>
+      <div class="box__center">Hover from any side</div>
+    </div>
+  </section>
+
+  <section style="max-width:900px; margin:3rem auto; text-align:left;">
+    <h2>What Sets Us Apart</h2>
+    <p><strong>✅ Strategic Demand-Letter Preparation &amp; Post-Settlement Reconciliation</strong><br>
+      Maximizing negotiating leverage with precise demand letters while streamlining lien resolution, expenses, and disbursements for faster case closures.</p>
+    <p><strong>✅ HIPAA-Compliant Portal</strong><br>
+      Securely drag and drop medical records, billing ledgers, and lien documents with confidence.</p>
+    <p><strong>✅ Efficiency-Driven Legal Support</strong><br>
+      We streamline pre-suit and post-settlement processes, helping law firms reduce administrative burdens and close cases faster.</p>
+  </section>
+
+  <section style="background:#f7f9fa; padding:3rem 0; text-align:center;">
+    <h2>Serving Law Firms Nationwide</h2>
+    <p style="max-width:800px; margin:0.5rem auto;">
+      ClaimWrit provides expert legal support across all U.S. jurisdictions, equipping attorneys with demand-letter precision, post-settlement medical reduction requests, and client balance verification—ensuring faster case resolutions with stronger financial outcomes.
+    </p>
+  </section>
+
+  <section style="padding:3rem 0; text-align:center;">
+    <h2>Request a Sample Demand Letter</h2>
+    <p style="max-width:600px; margin:0.5rem auto 2rem;">
+      Experience our meticulous approach with a complimentary redacted demand letter—where precision drives results.
+    </p>
+    <a href="request-sample.html" class="cta-button">Request Sample Demand</a>
+  </section>
+
+  <footer>
+    <p>&copy; 2025 ClaimWrit LLC · Fort Lauderdale, FL</p>
+  </footer>
 </body>
 </html>
