--- a/blog.html
+++ b/blog.html
@@ -1,76 +1,42 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-  <meta charset="UTF-8" />
-  <meta name="viewport" content="width=device-width,initial-scale=1.0" />
+  <meta charset="UTF-8"/>
+  <meta name="viewport" content="width=device-width,initial-scale=1.0"/>
   <title>ClaimWrit Blog</title>
-  <link rel="stylesheet" href="styles.css" />
-  <script>
-    function toggleContent(id){
-      var el=document.getElementById(id);
-      el.style.display = el.style.display === "none" ? "block" : "none";
-    }
-  </script>
+  <link rel="stylesheet" href="styles.css"/>
 </head>
 <body>
-
-<header>
   <nav>
     <ul>
       <li><a href="index.html">Home</a></li>
-      <li><a href="about.html">About Us</a></li>
-      <li><a href="more-about-us.html">More About Us</a></li>
-      <li><a href="services.html">Services</a></li>
-      <li><a href="request-sample.html">Request Sample</a></li>
+      <li><a href="our-mission.html">Our Mission & Expertise</a></li>
+      <li><a href="how-we-help.html">How We Help</a></li>
+      <li><a href="request-sample.html">Request Sample DEMAND</a></li>
       <li><a href="client-upload.html">Client Portal</a></li>
       <li><a href="contact.html">Contact</a></li>
       <li><a href="blog.html" class="active">Blog</a></li>
     </ul>
   </nav>
-  <h1 class="page-title">ClaimWrit Blog</h1>
-</header>
 
-<main class="sample-request-form">
-  <section class="blog-content">
-    <div class="blog-topic">
-      <h2 onclick="toggleContent('best-practices')">Best Practices in Demand Writing ▼</h2>
-      <div id="best-practices" style="display:none">
-        <p>Effective demand letters require strategic wording and legal precision. Learn how to structure, format, and refine your correspondence for maximum impact.</p>
-      </div>
-    </div>
+  <main style="padding:3rem 1rem; max-width:800px; margin:0 auto;">
+    <h1>ClaimWrit Blog</h1>
+    <p>Stay informed on best practices in demand-letter drafting, settlement strategies, and lien negotiation with ClaimWrit’s expert insights.</p>
 
-    <div class="blog-topic">
-      <h2 onclick="toggleContent('legal-trends')">Legal Trends in Settlements ▼</h2>
-      <div id="legal-trends" style="display:none">
-        <p>Stay ahead of legal trends with insights on case law updates, negotiation strategies, and legislative changes that impact demand writing.</p>
-      </div>
-    </div>
+    <h2>Featured Topics</h2>
+    <ul>
+      <li>🔹 <strong>Best Practices in Demand Writing</strong> – Crafting compelling demand letters that strengthen negotiations.</li>
+      <li>🔹 <strong>Legal Trends in Settlements</strong> – Industry updates on evolving settlement strategies.</li>
+      <li>🔹 <strong>Lien Negotiation Strategies</strong> – Maximizing net-to-client proceeds through effective lien reductions.</li>
+      <li>🔹 <strong>Behind-the-Scenes Expertise</strong> – How ClaimWrit refines legal documentation for efficiency and precision.</li>
+      <li>🔹 <strong>Industry FAQs</strong> – Addressing attorneys’ most common questions on legal documentation and settlement processes.</li>
+    </ul>
 
-    <div class="blog-topic">
-      <h2 onclick="toggleContent('lien-strategies')">Lien Negotiation Strategies ▼</h2>
-      <div id="lien-strategies" style="display:none">
-        <p>Navigate medical liens efficiently with proven techniques that protect settlement values and strengthen negotiation leverage.</p>
-      </div>
-    </div>
+    <p>ClaimWrit’s blog offers clear, structured guidance to help attorneys navigate demand drafting and post-settlement procedures with confidence.</p>
+  </main>
 
-    <div class="blog-topic">
-      <h2 onclick="toggleContent('behind-scenes')">Behind-the-Scenes Expertise ▼</h2>
-      <div id="behind-scenes" style="display:none">
-        <p>Get an inside look at how ClaimWrit ensures precision in demand writing and settlement analysis, from documentation workflows to compliance best practices.</p>
-      </div>
-    </div>
-
-    <div class="blog-topic">
-      <h2 onclick="toggleContent('faqs')">Industry FAQs ▼</h2>
-      <div id="faqs" style="display:none">
-        <p>Answers to common legal documentation questions, including when to escalate claims, how to spot errors, and optimizing demand letters for settlements.</p>
-      </div>
-    </div>
-  </section>
-</main>
-
-<footer>
-  <p>&copy; 2025 Envisage Companies, LLC. All rights reserved · <a href="privacy.html">Privacy Policy</a></p>
-</footer>
+  <footer>
+    <p>&copy; 2025 ClaimWrit LLC · Fort Lauderdale, FL</p>
+  </footer>
 </body>
 </html>
