--- a/contact.html
+++ b/contact.html
@@ -1,43 +1,40 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-  <meta charset="UTF-8" />
-  <meta name="viewport" content="width=device-width,initial-scale=1.0" />
+  <meta charset="UTF-8"/>
+  <meta name="viewport" content="width=device-width,initial-scale=1.0"/>
   <title>Contact | ClaimWrit</title>
-  <link rel="stylesheet" href="styles.css" />
+  <link rel="stylesheet" href="styles.css"/>
 </head>
 <body>
-
-<header>
   <nav>
     <ul>
       <li><a href="index.html">Home</a></li>
-      <li><a href="about.html">About Us</a></li>
-      <li><a href="more-about-us.html">More About Us</a></li>
-      <li><a href="services.html">Services</a></li>
-      <li><a href="request-sample.html">Request Sample</a></li>
+      <li><a href="our-mission.html">Our Mission & Expertise</a></li>
+      <li><a href="how-we-help.html">How We Help</a></li>
+      <li><a href="request-sample.html">Request Sample DEMAND</a></li>
       <li><a href="client-upload.html">Client Portal</a></li>
       <li><a href="contact.html" class="active">Contact</a></li>
       <li><a href="blog.html">Blog</a></li>
     </ul>
   </nav>
-  <h1 class="page-title">Contact ClaimWrit</h1>
-  <p class="page-tagline">We’re here to support your practice.</p>
-</header>
 
-<main class="sample-request-form">
-  <p>
-    <strong>Phone:</strong> (954) 408-1937<br>
-    <strong>E-mail:</strong> <a href="mailto:info@claimwrit.com">info@claimwrit.com</a><br>
-    <strong>Mail:</strong> ClaimWrit · Fort Lauderdale, FL 33334
-  </p>
-  <p>
-    For secure document uploads, please use our <a href="client-upload.html">Client Portal</a>.
-  </p>
-</main>
+  <main style="padding:3rem 1rem; max-width:600px; margin:0 auto; text-align:center;">
+    <h1>Contact ClaimWrit</h1>
+    <p>For inquiries, legal firms can reach ClaimWrit through the direct inquiry form, email, or phone.</p>
 
-<footer>
-  <p>&copy; 2025 Envisage Companies, LLC. All rights reserved · <a href="privacy.html">Privacy Policy</a></p>
-</footer>
+    <h2>Get in Touch</h2>
+    <ul style="list-style:none; padding:0; text-align:left; max-width:400px; margin:1rem auto;">
+      <li><strong>Direct Inquiry Form:</strong> Use our site’s contact form for case questions or service requests.</li>
+      <li><strong>Company Email & Phone:</strong> info@claimwrit.com | (954) 408-1937</li>
+      <li><strong>Office Location:</strong> Fort Lauderdale, FL</li>
+    </ul>
+
+    <p>ClaimWrit is committed to efficient and professional client communication, ensuring attorneys receive prompt responses and dedicated support.</p>
+  </main>
+
+  <footer>
+    <p>&copy; 2025 ClaimWrit LLC · Fort Lauderdale, FL · <a href="privacy.html">Privacy Policy</a></p>
+  </footer>
 </body>
 </html>
