--- a/services.html
+++ b/services.html
@@ -1,55 +1,31 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-  <meta charset="UTF-8" />
-  <meta name="viewport" content="width=device-width,initial-scale=1.0" />
-  <title>Services | ClaimWrit</title>
-  <link rel="stylesheet" href="styles.css" />
+  <meta charset="UTF-8"/>
+  <meta name="viewport" content="width=device-width,initial-scale=1.0"/>
+  <title>ClaimWrit | How We Help</title>
+  <link rel="stylesheet" href="styles.css"/>
 </head>
 <body>
-
-<header>
   <nav>
     <ul>
       <li><a href="index.html">Home</a></li>
-      <li><a href="about.html">About Us</a></li>
-      <li><a href="more-about-us.html">More About Us</a></li>
-      <li><a href="services.html" class="active">Services</a></li>
-      <li><a href="request-sample.html">Request Sample</a></li>
+      <li><a href="our-mission.html">Our Mission & Expertise</a></li>
+      <li><a href="how-we-help.html">How We Help</a></li>
+      <li><a href="request-sample.html">Request Sample DEMAND</a></li>
       <li><a href="client-upload.html">Client Portal</a></li>
       <li><a href="contact.html">Contact</a></li>
       <li><a href="blog.html">Blog</a></li>
     </ul>
   </nav>
-  <h1 class="page-title">Our Services</h1>
-  <p class="page-tagline">Comprehensive support from pre-suit to post-settlement.</p>
-</header>
 
-<main class="sample-request-form">
-  <h2>Demand-Letter Drafting</h2>
-  <p>
-    We craft litigation-ready demand letters that weave liability analysis, medical chronology, and special-damages computation into a persuasive narrative.
-  </p>
+  <main style="padding:3rem;">
+    <h1>How We Help</h1>
+    <!-- same content as how-we-help.html -->
+  </main>
 
-  <h2>Medical Chronology &amp; Billing Review</h2>
-  <p>
-    Detailed timelines, CPT coding verification, and itemized special-damages tables ready for mediation or trial exhibits.
-  </p>
-
-  <h2>Post-Settlement Lien Negotiations</h2>
-  <p>
-    We analyze subrogation, health-insurance EOBs, and statutory liens, securing reductions that protect net-to-client proceeds.
-  </p>
-
-  <h2>Custom Analytics &amp; Reports</h2>
-  <p>
-    Need a bespoke damages spreadsheet or a case-value assessment? We deliver tailored deliverables to your specifications.
-  </p>
-</main>
-
-<footer>
-  <p>&copy; 2025 Envisage Companies, LLC. All rights reserved · <a href="privacy.html">Privacy Policy</a></p>
-</footer>
+  <footer>
+    <p>&copy; 2025 ClaimWrit LLC · Fort Lauderdale, FL</p>
+  </footer>
 </body>
 </html>
-
